--- a/partner_multi_relation/i18n/da.po
+++ b/partner_multi_relation/i18n/da.po
@@ -1,6 +1,6 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * partner_relations
+# * partner_multi_relation
 # 
 # Translators:
 # Hans Henrik Gabelgaard <hhg@gabelgaard.org>, 2015
@@ -18,9 +18,9 @@ msgstr ""
 "Language: da\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#. module: partner_relations
-#: model:ir.actions.act_window,help:partner_relations.action_res_partner_relation
-#: model:ir.actions.act_window,help:partner_relations.action_res_partner_relation_all
+#. module: partner_multi_relation
+#: model:ir.actions.act_window,help:partner_multi_relation.action_res_partner_relation
+#: model:ir.actions.act_window,help:partner_multi_relation.action_res_partner_relation_all
 msgid ""
 "<p class=\"oe_view_nocontent_create\">\n"
 "                    Record and track your partners' relations. Relations may be linked to other partners with a type either directly or inversely.\n"
@@ -28,72 +28,72 @@ msgid ""
 "            "
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,active:0 field:res.partner.relation.all,active:0
 msgid "Active"
 msgstr "Aktiv"
 
-#. module: partner_relations
-#: model:ir.model,name:partner_relations.model_res_partner_relation_all
+#. module: partner_multi_relation
+#: model:ir.model,name:partner_multi_relation.model_res_partner_relation_all
 msgid "All (non-inverse + inverse) relations between partners"
 msgstr ""
 
-#. module: partner_relations
-#: model:ir.model,name:partner_relations.model_res_partner_relation_type_selection
+#. module: partner_multi_relation
+#: model:ir.model,name:partner_multi_relation.model_res_partner_relation_type_selection
 msgid "All relation types"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner,relation_all_ids:0
 msgid "All relations with current partner"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,allow_self:0
 #: field:res.partner.relation.type,allow_self:0
 msgid "Allow both sides to be the same"
 msgstr ""
 
-#. module: partner_relations
-#: code:addons/partner_relations/model/res_partner_relation_type.py:68
+#. module: partner_multi_relation
+#: code:addons/partner_multi_relation/model/res_partner_relation_type.py:68
 #, python-format
 msgid "Company"
 msgstr "Virksomhed"
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,create_uid:0
 #: field:res.partner.relation.type,create_uid:0
 msgid "Created by"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,create_date:0
 #: field:res.partner.relation.type,create_date:0
 msgid "Created on"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.all,this_partner_id:0
 msgid "Current Partner"
 msgstr "Aktuel partner"
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type.selection,partner_category_this:0
 #: field:res.partner.relation.type.selection,search_partner_category_this:0
 msgid "Current record's category"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type.selection,contact_type_this:0
 msgid "Current record's partner type"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,right_partner_id:0
 msgid "Destination Partner"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,display_name:0
 #: field:res.partner.relation.all,display_name:0
 #: field:res.partner.relation.type,display_name:0
@@ -101,78 +101,78 @@ msgstr ""
 msgid "Display Name"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,date_end:0
 #: field:res.partner.relation.all,date_end:0
 msgid "Ending date"
 msgstr ""
 
-#. module: partner_relations
-#: view:res.partner.relation:partner_relations.search_res_partner_relation
-#: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
+#. module: partner_multi_relation
+#: view:res.partner.relation:partner_multi_relation.search_res_partner_relation
+#: view:res.partner.relation.all:partner_multi_relation.search_res_partner_relation_all
 msgid "Group By"
 msgstr ""
 
-#. module: partner_relations
-#: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_assistant
+#. module: partner_multi_relation
+#: model:res.partner.relation.type,name_inverse:partner_multi_relation.rel_type_assistant
 msgid "Has assistant"
 msgstr ""
 
-#. module: partner_relations
-#: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_has_worked_for
+#. module: partner_multi_relation
+#: model:res.partner.relation.type,name_inverse:partner_multi_relation.rel_type_has_worked_for
 msgid "Has former employee"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner,search_relation_id:0
 msgid "Has relation of type"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner,search_relation_partner_id:0
 msgid "Has relation with"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner,search_relation_partner_category_id:0
 msgid "Has relation with a partner in category"
 msgstr ""
 
-#. module: partner_relations
-#: model:res.partner.relation.type,name:partner_relations.rel_type_has_worked_for
+#. module: partner_multi_relation
+#: model:res.partner.relation.type,name:partner_multi_relation.rel_type_has_worked_for
 msgid "Has worked for"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,id:0 field:res.partner.relation.all,id:0
 #: field:res.partner.relation.type,id:0
 #: field:res.partner.relation.type.selection,id:0
 msgid "ID"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type,name_inverse:0
 msgid "Inverse name"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: selection:res.partner.relation.all,record_type:0
 #: selection:res.partner.relation.type.selection,record_type:0
 msgid "Inverse type"
 msgstr ""
 
-#. module: partner_relations
-#: model:res.partner.relation.type,name:partner_relations.rel_type_assistant
+#. module: partner_multi_relation
+#: model:res.partner.relation.type,name:partner_multi_relation.rel_type_assistant
 msgid "Is assistant of"
 msgstr ""
 
-#. module: partner_relations
-#: model:res.partner.relation.type,name:partner_relations.rel_type_competitor
-#: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_competitor
+#. module: partner_multi_relation
+#: model:res.partner.relation.type,name:partner_multi_relation.rel_type_competitor
+#: model:res.partner.relation.type,name_inverse:partner_multi_relation.rel_type_competitor
 msgid "Is competitor of"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,__last_update:0
 #: field:res.partner.relation.all,__last_update:0
 #: field:res.partner.relation.type,__last_update:0
@@ -180,242 +180,242 @@ msgstr ""
 msgid "Last Modified on"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,write_uid:0
 #: field:res.partner.relation.type,write_uid:0
 msgid "Last Updated by"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,write_date:0
 #: field:res.partner.relation.type,write_date:0
 msgid "Last Updated on"
 msgstr ""
 
-#. module: partner_relations
-#: view:res.partner.relation:partner_relations.search_res_partner_relation
+#. module: partner_multi_relation
+#: view:res.partner.relation:partner_multi_relation.search_res_partner_relation
 msgid "Left Partner"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,left_contact_type:0
 msgid "Left Partner Type"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type,partner_category_left:0
 msgid "Left partner category"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type,contact_type_left:0
 msgid "Left partner type"
 msgstr ""
 
-#. module: partner_relations
-#: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
+#. module: partner_multi_relation
+#: view:res.partner.relation.type:partner_multi_relation.form_res_partner_relation_type
 msgid "Left side of relation"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type,name:0
 #: field:res.partner.relation.type.selection,name:0
 msgid "Name"
 msgstr "Navn"
 
-#. module: partner_relations
-#: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
+#. module: partner_multi_relation
+#: view:res.partner.relation.all:partner_multi_relation.search_res_partner_relation_all
 #: field:res.partner.relation.all,other_partner_id:0
 msgid "Other Partner"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type.selection,partner_category_other:0
 msgid "Other record's category"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type.selection,contact_type_other:0
 msgid "Other record's partner type"
 msgstr ""
 
-#. module: partner_relations
-#: model:ir.model,name:partner_relations.model_res_partner
+#. module: partner_multi_relation
+#: model:ir.model,name:partner_multi_relation.model_res_partner
 #: field:res.partner.relation,any_partner_id:0
 #: field:res.partner.relation,partner_id_display:0
 msgid "Partner"
 msgstr "Partner"
 
-#. module: partner_relations
-#: view:res.partner.relation:partner_relations.form_res_partner_relation
+#. module: partner_multi_relation
+#: view:res.partner.relation:partner_multi_relation.form_res_partner_relation
 msgid "Partner Relation"
 msgstr ""
 
-#. module: partner_relations
-#: model:ir.model,name:partner_relations.model_res_partner_relation_type
+#. module: partner_multi_relation
+#: model:ir.model,name:partner_multi_relation.model_res_partner_relation_type
 msgid "Partner Relation Type"
 msgstr ""
 
-#. module: partner_relations
-#: view:res.partner.relation:partner_relations.tree_res_partner_relation
-#: view:res.partner.relation.all:partner_relations.tree_res_partner_relation_all
+#. module: partner_multi_relation
+#: view:res.partner.relation:partner_multi_relation.tree_res_partner_relation
+#: view:res.partner.relation.all:partner_multi_relation.tree_res_partner_relation_all
 msgid "Partner Relations"
 msgstr ""
 
-#. module: partner_relations
-#: model:ir.actions.act_window,name:partner_relations.action_res_partner_relation_type
-#: model:ir.ui.menu,name:partner_relations.menu_res_partner_relation_type
+#. module: partner_multi_relation
+#: model:ir.actions.act_window,name:partner_multi_relation.action_res_partner_relation_type
+#: model:ir.ui.menu,name:partner_multi_relation.menu_res_partner_relation_type
 msgid "Partner Relations Types"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.all,contact_type:0
 msgid "Partner Type"
 msgstr ""
 
-#. module: partner_relations
-#: model:ir.model,name:partner_relations.model_res_partner_relation
-#: view:res.partner.relation.all:partner_relations.form_res_partner_relation_all
-#: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
-#: view:res.partner.relation.type:partner_relations.tree_res_partner_relation_type
+#. module: partner_multi_relation
+#: model:ir.model,name:partner_multi_relation.model_res_partner_relation
+#: view:res.partner.relation.all:partner_multi_relation.form_res_partner_relation_all
+#: view:res.partner.relation.type:partner_multi_relation.form_res_partner_relation_type
+#: view:res.partner.relation.type:partner_multi_relation.tree_res_partner_relation_type
 msgid "Partner relation"
 msgstr ""
 
-#. module: partner_relations
-#: code:addons/partner_relations/model/res_partner_relation.py:301
+#. module: partner_multi_relation
+#: code:addons/partner_multi_relation/model/res_partner_relation.py:301
 #, python-format
 msgid "Partners cannot have a relation with themselves."
 msgstr ""
 
-#. module: partner_relations
-#: code:addons/partner_relations/model/res_partner_relation_type.py:69
+#. module: partner_multi_relation
+#: code:addons/partner_multi_relation/model/res_partner_relation_type.py:69
 #, python-format
 msgid "Person"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.all,record_type:0
 msgid "Record Type"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type.selection,record_type:0
 msgid "Record type"
 msgstr ""
 
-#. module: partner_relations
-#: code:addons/partner_relations/model/res_partner_relation.py:370
+#. module: partner_multi_relation
+#: code:addons/partner_multi_relation/model/res_partner_relation.py:370
 #, python-format
 msgid "Related partners"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.all,relation_id:0
 msgid "Relation"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner,relation_count:0
 msgid "Relation Count"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.all,type_id:0
 #: field:res.partner.relation.all,type_selection_id:0
 msgid "Relation Type"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner,search_relation_date:0
 msgid "Relation valid"
 msgstr ""
 
-#. module: partner_relations
-#: model:ir.actions.act_window,name:partner_relations.action_res_partner_relation
-#: model:ir.actions.act_window,name:partner_relations.action_res_partner_relation_all
-#: model:ir.ui.menu,name:partner_relations.menu_res_partner_relation_sales
-#: view:res.partner:partner_relations.view_partner_form
+#. module: partner_multi_relation
+#: model:ir.actions.act_window,name:partner_multi_relation.action_res_partner_relation
+#: model:ir.actions.act_window,name:partner_multi_relation.action_res_partner_relation_all
+#: model:ir.ui.menu,name:partner_multi_relation.menu_res_partner_relation_sales
+#: view:res.partner:partner_multi_relation.view_partner_form
 #: field:res.partner,relation_ids:0
 msgid "Relations"
 msgstr ""
 
-#. module: partner_relations
-#: view:res.partner.relation:partner_relations.search_res_partner_relation
-#: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
+#. module: partner_multi_relation
+#: view:res.partner.relation:partner_multi_relation.search_res_partner_relation
+#: view:res.partner.relation.all:partner_multi_relation.search_res_partner_relation_all
 msgid "Relationship Type"
 msgstr ""
 
-#. module: partner_relations
-#: view:res.partner.relation:partner_relations.search_res_partner_relation
+#. module: partner_multi_relation
+#: view:res.partner.relation:partner_multi_relation.search_res_partner_relation
 msgid "Right Partner"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,right_contact_type:0
 msgid "Right Partner Type"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type,partner_category_right:0
 msgid "Right partner category"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation.type,contact_type_right:0
 msgid "Right partner type"
 msgstr ""
 
-#. module: partner_relations
-#: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
+#. module: partner_multi_relation
+#: view:res.partner.relation.type:partner_multi_relation.form_res_partner_relation_type
 msgid "Right side of relation"
 msgstr ""
 
-#. module: partner_relations
-#: view:res.partner.relation:partner_relations.search_res_partner_relation
-#: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
+#. module: partner_multi_relation
+#: view:res.partner.relation:partner_multi_relation.search_res_partner_relation
+#: view:res.partner.relation.all:partner_multi_relation.search_res_partner_relation_all
 msgid "Search Relations"
 msgstr ""
 
-#. module: partner_relations
-#: model:ir.actions.act_window,name:partner_relations.action_show_partner_relations
+#. module: partner_multi_relation
+#: model:ir.actions.act_window,name:partner_multi_relation.action_show_partner_multi_relation
 msgid "Show partner's relations"
 msgstr ""
 
-#. module: partner_relations
-#: model:ir.actions.server,name:partner_relations.action_show_right_relation_partners
+#. module: partner_multi_relation
+#: model:ir.actions.server,name:partner_multi_relation.action_show_right_relation_partners
 msgid "Show partners"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,left_partner_id:0
 msgid "Source Partner"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,date_start:0
 #: field:res.partner.relation.all,date_start:0
 msgid "Starting date"
 msgstr ""
 
-#. module: partner_relations
-#: code:addons/partner_relations/model/res_partner_relation.py:287
+#. module: partner_multi_relation
+#: code:addons/partner_multi_relation/model/res_partner_relation.py:287
 #, python-format
 msgid "The %s partner is not applicable for this relation type."
 msgstr ""
 
-#. module: partner_relations
-#: code:addons/partner_relations/model/res_partner_relation.py:254
+#. module: partner_multi_relation
+#: code:addons/partner_multi_relation/model/res_partner_relation.py:254
 #, python-format
 msgid "The starting date cannot be after the ending date."
 msgstr ""
 
-#. module: partner_relations
-#: code:addons/partner_relations/model/res_partner_relation.py:329
+#. module: partner_multi_relation
+#: code:addons/partner_multi_relation/model/res_partner_relation.py:329
 #, python-format
 msgid "There is already a similar relation with overlapping dates"
 msgstr ""
 
-#. module: partner_relations
+#. module: partner_multi_relation
 #: field:res.partner.relation,type_id:0
 #: field:res.partner.relation,type_selection_id:0
 #: selection:res.partner.relation.all,record_type:0
@@ -424,8 +424,8 @@ msgstr ""
 msgid "Type"
 msgstr ""
 
-#. module: partner_relations
-#: code:addons/partner_relations/model/res_partner.py:122
+#. module: partner_multi_relation
+#: code:addons/partner_multi_relation/model/res_partner.py:122
 #, python-format
 msgid "Unsupported search operand \"%s\""
 msgstr ""
