--- a/partner_financial_risk/i18n/es.po
+++ b/partner_financial_risk/i18n/es.po
@@ -1,7 +1,7 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
 # * partner_financial_risk
-# 
+#
 # Translators:
 # Carlos Dauden <carlos.dauden@tecnativa.com>, 2016
 # Pedro M. Baeza <pedro.baeza@gmail.com>, 2017
@@ -9,15 +9,22 @@ msgid ""
 msgstr ""
 "Project-Id-Version: partner-contact (9.0)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-06 03:40+0000\n"
-"PO-Revision-Date: 2017-01-05 18:28+0000\n"
-"Last-Translator: Pedro M. Baeza <pedro.baeza@gmail.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/oca/OCA-partner-contact-9-0/language/es/)\n"
+"POT-Creation-Date: 2017-10-08 23:36+0200\n"
+"PO-Revision-Date: 2017-10-08 23:39+0200\n"
+"Last-Translator: Carlos Dauden <carlos.dauden@tecnativa.com>\n"
+"Language-Team: Spanish (http://www.transifex.com/oca/OCA-partner-contact-9-0/"
+"language/es/)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Language: es\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 1.8.7.1\n"
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_move_line_ids
+msgid "Account Moves"
+msgstr "Apuntes contables"
 
 #. module: partner_financial_risk
 #: model:ir.ui.view,arch_db:partner_financial_risk.partner_risk_exceeded_wizard
@@ -62,13 +69,13 @@ msgstr "Cliente"
 #. module: partner_financial_risk
 #: model:ir.model.fields,help:partner_financial_risk.field_account_config_settings_invoice_unpaid_margin
 #: model:ir.model.fields,help:partner_financial_risk.field_res_company_invoice_unpaid_margin
-msgid "Days after due date to set an invoice as unpaid"
-msgstr "Días después de la fecha de vencimiento para considerar una factura como impagada"
-
-#. module: partner_financial_risk
-#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_account_amount
-msgid "Difference between accounting credit and rest of totals"
-msgstr "Diferencia entre el saldo contable y el resto de totales"
+msgid ""
+"Days after due date to set an invoice as unpaid.The change of this field "
+"recompute all partners risk,be patient."
+msgstr ""
+"Días posteriores a la fecha de vencimiento para establecer una factura como "
+"impagada. El cambio de este campo recalculará el riesgo de todos los "
+"clientes, tenga paciencia."
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_partner_risk_exceeded_wiz_display_name
@@ -98,12 +105,64 @@ msgid "Financial risk exceeded.\n"
 msgstr "Riesgo financiero excedido.\n"
 
 #. module: partner_financial_risk
-#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_account_amount_include
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_draft_include
-#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_open_include
-#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_unpaid_include
 msgid "Full risk computation"
-msgstr "Cómputo de riesgo total"
+msgstr "Computar en riesgo total."
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_account_amount_unpaid_include
+msgid ""
+"Full risk computation.\n"
+"Residual amount of move lines not reconciled with distinct account that is "
+"set as partner receivable and date maturity exceeded, considering Due Margin "
+"set in account settings."
+msgstr ""
+"Computar en riesgo total.\n"
+"Importe residual de apuntes no conciliados con cuenta distinta a la "
+"establecida como cuenta a cobrar del cliente y fecha vencimiento excedida, "
+"teniendo en cuenta los días de margen establecidos en la configuración de "
+"contabilidad."
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_account_amount_include
+msgid ""
+"Full risk computation.\n"
+"Residual amount of move lines not reconciled with distinct account that is "
+"set as partner receivable and date maturity not exceeded, considering Due "
+"Margin set in account settings."
+msgstr ""
+"Computar en riesgo total.\n"
+"Importe residual de apuntes no conciliados con cuenta distinta a la "
+"establecida como cuenta a cobrar del cliente y fecha vencimiento no "
+"excedida, teniendo en cuenta los días de margen establecidos en la "
+"configuración de contabilidad."
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_unpaid_include
+msgid ""
+"Full risk computation.\n"
+"Residual amount of move lines not reconciled with the same account that is "
+"set as partner receivable and date maturity exceeded, considering Due Margin "
+"set in account settings."
+msgstr ""
+"Computar en riesgo total.\n"
+"Importe residual de apuntes no conciliados con cuenta igual a la establecida "
+"como cuenta a cobrar del cliente y fecha vencimiento excedida, teniendo en "
+"cuenta los días de margen establecidos en la configuración de contabilidad."
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_open_include
+msgid ""
+"Full risk computation.\n"
+"Residual amount of move lines not reconciled with the same account that is "
+"set as partner receivable and date maturity not exceeded, considering Due "
+"Margin set in account settings."
+msgstr ""
+"Computar en riesgo total.\n"
+"Importe residual de apuntes no conciliados con cuenta igual a la establecida "
+"como cuenta a cobrar del cliente y fecha vencimiento no excedida, teniendo "
+"en cuenta los días de margen establecidos en la configuración de "
+"contabilidad."
 
 #. module: partner_financial_risk
 #: model:ir.ui.view,arch_db:partner_financial_risk.res_partner_view_risk
@@ -122,18 +181,23 @@ msgstr "Incluir facturas borrador"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_invoice_open_include
-msgid "Include Open Invoices"
-msgstr "Incluir facturas abiertas"
+msgid "Include Open Invoices/Principal Balance"
+msgstr "Incluir facturas/saldo principal abierto"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_account_amount_include
-msgid "Include Other Account Amount"
-msgstr "Incluir otros saldos contables"
+msgid "Include Other Account Open Amount"
+msgstr "Incluir otro saldo contable abierto"
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_account_amount_unpaid_include
+msgid "Include Other Account Unpaid Amount"
+msgstr "Incluir otro saldo contable impagado"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_invoice_unpaid_include
-msgid "Include Unpaid Invoices"
-msgstr "Incluir facturas impagadas"
+msgid "Include Unpaid Invoices/Principal Balance"
+msgstr "Incluir facturas/saldo principal impagado"
 
 #. module: partner_financial_risk
 #: model:ir.ui.view,arch_db:partner_financial_risk.res_partner_view_risk
@@ -149,6 +213,11 @@ msgstr "Factura"
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_exception
 msgid "It Indicate if partner risk exceeded"
 msgstr "Indica si se ha excedido el riesgo"
+
+#. module: partner_financial_risk
+#: model:ir.model,name:partner_financial_risk.model_account_move_line
+msgid "Journal Item"
+msgstr "Apunte contable"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_partner_risk_exceeded_wiz___last_update
@@ -172,18 +241,23 @@ msgstr "Límite en facturas borrador"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_invoice_open_limit
-msgid "Limit In Open Invoices"
-msgstr "Límite en facturas abiertas"
+msgid "Limit In Open Invoices/Principal Balance"
+msgstr "Límite en factures/saldo principal abierto"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_invoice_unpaid_limit
-msgid "Limit In Unpaid Invoices"
-msgstr "Límite en facturas impagadas"
+msgid "Limit In Unpaid Invoices/Principal Balance"
+msgstr "Límite en factures/saldo principal impagado"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_account_amount_limit
-msgid "Limit Other Account Amount"
-msgstr "Límite en otros saldos contables"
+msgid "Limit Other Account Open Amount"
+msgstr "Límite en otro saldo contable abierto"
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_account_amount_unpaid_limit
+msgid "Limit Other Account Unpaid Amount"
+msgstr "Límite en otro saldo contable impagado"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_account_config_settings_invoice_unpaid_margin
@@ -197,11 +271,6 @@ msgid "Object"
 msgstr "Objeto"
 
 #. module: partner_financial_risk
-#: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_account_amount
-msgid "Other Account Amount"
-msgstr "Otros saldos contables"
-
-#. module: partner_financial_risk
 #: model:ir.model,name:partner_financial_risk.model_res_partner
 msgid "Partner"
 msgstr "Empresa"
@@ -213,18 +282,51 @@ msgid "Partner risk exceeded"
 msgstr "Empresa con riesgo excedido"
 
 #. module: partner_financial_risk
+#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_account_amount_unpaid
+msgid ""
+"Residual amount of move lines not reconciled with distinct account that is "
+"set as partner receivable and date maturity exceeded, considering Due Margin "
+"set in account settings."
+msgstr ""
+"Importe residual de apuntes no conciliados con cuenta distinta a la "
+"establecida como cuenta a cobrar del cliente y fecha vencimiento excedida, "
+"teniendo en cuenta los días de margen establecidos en la configuración de "
+"contabilidad."
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_account_amount
+msgid ""
+"Residual amount of move lines not reconciled with distinct account that is "
+"set as partner receivable and date maturity not exceeded, considering Due "
+"Margin set in account settings."
+msgstr ""
+"Importe residual de apuntes no conciliados con cuenta distinta a la "
+"establecida como cuenta a cobrar del cliente y fecha vencimiento no "
+"excedida, teniendo en cuenta los días de margen establecidos en la "
+"configuración de contabilidad."
+
+#. module: partner_financial_risk
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_unpaid
 msgid ""
-"Residual amount of invoices in Open state and the date due is exceeded, "
-"considering Unpaid Margin set in account settings"
-msgstr "Importe pendiente en facturas abiertas cuya fecha de vencimiento se ha excedido, considerando el margen de días establecido en configuración de contabilidad"
+"Residual amount of move lines not reconciled with the same account that is "
+"set as partner receivable and date maturity exceeded, considering Due Margin "
+"set in account settings."
+msgstr ""
+"Importe residual de apuntes no conciliados con cuenta igual a la establecida "
+"como cuenta a cobrar del cliente y fecha vencimiento excedida, teniendo en "
+"cuenta los días de margen establecidos en la configuración de contabilidad."
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_open
 msgid ""
-"Residual amount of invoices in Open state and the date due is not exceeded, "
-"considering Due Margin set in account settings"
-msgstr "Importe pendiente en facturas abiertas cuya fecha de vencimiento no se ha excedido, considerando el margen de días establecido en configuración de contabilidad"
+"Residual amount of move lines not reconciled with the same account that is "
+"set as partner receivable and date maturity not exceeded, considering Due "
+"Margin set in account settings."
+msgstr ""
+"Importe residual de apuntes no conciliados con cuenta igual a la establecida "
+"como cuenta a cobrar del cliente y fecha vencimiento no excedida, teniendo "
+"en cuenta los días de margen establecidos en la configuración de "
+"contabilidad."
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_exception
@@ -243,6 +345,7 @@ msgstr "Riesgo excedido"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_account_amount_limit
+#: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_account_amount_unpaid_limit
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_draft_limit
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_open_limit
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_unpaid_limit
@@ -265,7 +368,7 @@ msgid "The partner has exceeded his risk"
 msgstr "La empresa ha excedido su riesgo"
 
 #. module: partner_financial_risk
-#: code:addons/partner_financial_risk/models/account_invoice.py:28
+#: code:addons/partner_financial_risk/models/account_invoice.py:30
 #, python-format
 msgid "This invoice exceeds the financial risk.\n"
 msgstr "Esta factura excede el riesgo financiero.\n"
@@ -283,8 +386,18 @@ msgstr "Total facturas borrador"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_invoice_open
-msgid "Total Open Invoices"
-msgstr "Total facturas borrador abiertas"
+msgid "Total Open Invoices/Principal Balance"
+msgstr "Total facturas/saldo principal abierto"
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_account_amount
+msgid "Total Other Account Open Amount"
+msgstr "Total otro saldo contable abierto"
+
+#. module: partner_financial_risk
+#: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_account_amount_unpaid
+msgid "Total Other Account Unpaid Amount"
+msgstr "Total otro saldo contable impagado"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_total
@@ -293,8 +406,8 @@ msgstr "Riesgo total"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,field_description:partner_financial_risk.field_res_partner_risk_invoice_unpaid
-msgid "Total Unpaid Invoices"
-msgstr "Total facturas impagadas"
+msgid "Total Unpaid Invoices/Principal Balance"
+msgstr "Total facturas/saldo principal impagado"
 
 #. module: partner_financial_risk
 #: model:ir.model.fields,help:partner_financial_risk.field_res_partner_risk_invoice_draft
