--- a/partner_payment_return_risk/i18n/es.po
+++ b/partner_payment_return_risk/i18n/es.po
@@ -6,21 +6,25 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 9.0c\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-10 18:34+0100\n"
-"PO-Revision-Date: 2017-01-10 18:40+0100\n"
+"POT-Creation-Date: 2017-10-08 23:50+0200\n"
+"PO-Revision-Date: 2017-10-08 23:53+0200\n"
+"Last-Translator: Carlos Dauden <carlos.dauden@tecnativa.com>\n"
 "Language-Team: \n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.8.7.1\n"
-"Last-Translator: Carlos Dauden <carlos.dauden@tecnativa.com>\n"
-"Language: es_ES\n"
 
 #. module: partner_payment_return_risk
 #: model:ir.model.fields,help:partner_payment_return_risk.field_res_partner_risk_payment_return_include
-msgid "Full risk computation"
-msgstr "Cálculo de riesgo completo"
+msgid ""
+"Full risk computation.\n"
+"Residual amount of move lines not reconciled with returned lines related."
+msgstr ""
+"Computar en riesgo total.\n"
+"Importe residual de apuntes no conciliados relacionados con apuntes devueltos."
 
 #. module: partner_payment_return_risk
 #: model:ir.model.fields,field_description:partner_payment_return_risk.field_res_partner_risk_payment_return_include
@@ -38,16 +42,16 @@ msgid "Partner"
 msgstr "Empresa"
 
 #. module: partner_payment_return_risk
+#: model:ir.model.fields,help:partner_payment_return_risk.field_res_partner_risk_payment_return
+msgid "Residual amount of move lines not reconciled with returned lines related."
+msgstr "Importe residual de apuntes no conciliados relacionados con apuntes devueltos."
+
+#. module: partner_payment_return_risk
 #: model:ir.model.fields,help:partner_payment_return_risk.field_res_partner_risk_payment_return_limit
 msgid "Set 0 if it is not locked"
 msgstr "Establece 0 si no está bloqueado"
 
 #. module: partner_payment_return_risk
 #: model:ir.model.fields,field_description:partner_payment_return_risk.field_res_partner_risk_payment_return
-msgid "Total Returned Invoices"
-msgstr "Total facturas devueltas"
-
-#. module: partner_payment_return_risk
-#: model:ir.model.fields,help:partner_payment_return_risk.field_res_partner_risk_payment_return
-msgid "Total returned invoices in Open state"
-msgstr "Total facturas devueltas en estado abierto"
+msgid "Total Payments Returns"
+msgstr "Total pagos devueltos"
